--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
+            sudo -i
             cd /var/www/test-aws || git clone https://github.com/${{ github.repository }} app
             cd test-aws
             git pull origin main
