--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             sudo -i
-            cd ~/var/www/test-aws 
+            cd /var/www/test-aws
             git pull origin main
             npm install
             npm run build
