--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,9 +31,8 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            sudo -i
-            cd ~/var/www/test-aws
+            cd /var/www/test-aws
             git pull origin main
             npm install
-            npm run build
-            pm2 restart 0
+            npm run build || echo "No build step"
+            pm2 restart all
