--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,4 +39,4 @@ jobs:
             git pull origin main
             npm install
             npm run build || echo "No build step"
-            pm2 restart all
+            pm2 restart 0 --update-env
