--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "local": "nodemon",
-    "start": "ts-node ./src/index.ts",
-    "dev": "npm run build && node ./dist/index.js",
+    "start": "npm run build && node ./dist/index.js",
+    "dev": "ts-node ./src/index.tss",
     "prod": "npm run build && node ./dist/index.js",
     "build": "tsc -b",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +18,6 @@
   "dependencies": {
     "@types/express": "^5.0.6",
     "express": "^5.2.1",
-    "node-ts": "^8.0.11"
+    "ts-node": "^10.9.2"
   }
 }
