--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       # Login to GitHub Container Registry
       - name: Login to GHCR
         run: |
-          echo "${{ secrets.Token }}" | docker login ghcr.io \
+          echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io \
             -u ${{ github.actor }} --password-stdin
 
       # Build Docker image (Node 24 comes from Dockerfile)
@@ -40,7 +40,7 @@ jobs:
           script: |
             docker login ghcr.io \
               -u ${{ github.actor }} \
-              -p ${{ secrets.Token }}
+              -p ${{ secrets.GITHUB_TOKEN }}
 
             docker pull ghcr.io/${{ github.repository }}:latest
 
